--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,5 @@
-body{
-    margin: 0px
+html, body{
+    margin: 0px;
 }
 
 .person-image {
@@ -12,7 +12,7 @@ body{
 
 .header-image{
     background-image: url('../assets/hader-bg.png');
-    height: 250px;
+    height: 196px;
 }
 
 .ma-left {
