header image changed

--- a/styles/style.css
+++ b/styles/style.css
@@ -11,7 +11,7 @@ html, body{
 }
 
 .header-image{
-    background-image: url('../assets/hader-bg.png');
+    background-image: url('../assets/header-2.jpg');
     height: 196px;
 }
 
