--- a/styles/movie.css
+++ b/styles/movie.css
@@ -3,13 +3,16 @@ body{
     padding: 0px;
     font-size: 100%;
     background-image: url('../assets/tmnt/background.png');
+    font-size: 8pt;
+    font-family: Verdana, Tahoma, sans-serif;
 }
 
 .container{
-    margin: auto;
     width: 800px;
-    border: 4px solid gray;
-    border-radius: 20px;
+	margin: auto;
+	border: 4px solid gray;
+	border-radius: 20px;
+	overflow: hidden;
 }
 
 h1{
@@ -22,4 +25,93 @@ h1{
 .banner{
     background-image: url('../assets/tmnt/bannerbg.png');
     background-repeat: repeat;
+    text-align: center;
+}
+
+.review{
+    width: 550px;
+    float: left;
+}
+
+.overview{
+    width: 250px;
+	float: right;
+	background: #A2B964;
+	font-size: 8pt;
+	font-family: Arial, sans-serif;
+}
+
+.review-column{
+    width: 47%;
+    padding-left: 2%;
+    float: left;
+}
+
+.review-column p:nth-child(2n + 1){
+    font-size: 8pt;
+    font-weight: bold;
+    border: 2px solid gray;
+    border-radius: 10px;
+    padding: 8px;
+}
+
+.review-column p:nth-child(2n){
+    margin-bottom: 20pt;
+}
+
+.review-column p img {
+	margin-right: 5px;
+	float: left;
+}
+
+.review-column p {
+	overflow: hidden;
+}
+
+.overview dl {
+	padding: 10pt;
+	margin: 0;
+}
+
+.overview dl dt {
+	font-weight: bold;
+	margin-top: 10pt;
+}
+
+.overview dl dt:first-child {
+	margin: 0;
+}
+
+.overview dl ul {
+	margin: 0;
+	padding: 0;
+	list-style: none;
+}
+
+.footer {
+	clear: both;
+	text-align: center;
+	background: #A2B964;
+	margin: 0;
+	padding: 5px;
+}
+
+.validators{
+    display: inline-block;
+	opacity: 0.5;
+	position: fixed;
+	right: 0px;
+	bottom: 0px;
+}
+
+.review-header{
+    background-image: url('../assets/tmnt/rbg.png');
+    height: 83px;
+    font-size: 46pt;
+    font-weight: bold;
+    color: red;
+}
+
+.review-header img{
+    vertical-align: text-bottom;
 }
