--- a/styles/signup.css
+++ b/styles/signup.css
@@ -45,7 +45,7 @@ footer p{
 }
 
 legend{
-    border-radius: 2px solid white;
+    border-radius: 2px;
     background-color: white;
     box-shadow: 1px 1px 1px 1px black;
 }
@@ -57,4 +57,8 @@ legend, .btn-signup{
 .red-nonunderline-link{
     color: red;
     text-decoration: none;
+}
+
+.back-to-home{
+    vertical-align: middle;
 }
